@@ -9,6 +9,7 @@ export(aes_all)
 export(annotate)
 export(benchplot)
 export(coord)
+export(is.coord)
 S3method(coord_render_bg, default)
 S3method(coord_render_axis_h, default)
 S3method(coord_render_axis_v, default)
@@ -168,13 +169,13 @@ S3method(scale_breaks, continuous)
 S3method(scale_breaks, discrete)
 S3method(scale_labels, continuous)
 S3method(scale_labels, discrete)
+S3method(scale_clone, continuous)
 export(scale_alpha, scale_alpha_continuous)
 export(scale_alpha_discrete)
 export(scale_area)
 export(scale_colour_brewer, scale_fill_brewer)
 export(scale_x_continuous, scale_y_continuous, scale_x_log10, scale_y_log10, scale_x_reverse, scale_y_reverse, scale_x_sqrt, scale_y_sqrt)
 S3method(scale_map, position_c)
-S3method(scale_clone, position_c)
 export(scale_x_date, scale_y_date)
 export(scale_x_datetime, scale_y_datetime)
 export(scale_x_discrete, scale_y_discrete)
