@@ -33,7 +33,7 @@
 #' 
 #' # Input that works with image
 #' image(t(volcano)[ncol(volcano):1,])
-#' ggplot(melt(volcano), aes(x=X1, y=X2, fill=value)) + geom_tile()
+#' ggplot(melt(volcano), aes(x=Var1, y=Var2, fill=value)) + geom_tile()
 #' 
 #' # inspired by the image-density plots of Ken Knoblauch
 #' cars <- ggplot(mtcars, aes(y=factor(cyl), x=mpg))
