@@ -1,0 +1,9 @@
+\name{is.coord}
+\alias{is.coord}
+\title{Is this object a coordinate system?}
+\usage{is.coord(x)}
+
+\description{
+  Is this object a coordinate system?
+}
+\keyword{internal}
